recursion.logo.spiral.Spiral.scala.error
Compilation error:
Spiral:3: error: not found: value lenghth
  avance(lenghth:Double)
         ^Spiral:5: error: not found: value spirale
  spirale (steps-1,angle,length +increment)
  ^