recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  
  avance(lenghth:Double)
  gauche(angle:Double)
  spirale (steps-1,angle,length +increment)
}
}